# practical-agentic-ai

./: .gitignore  README.md
filesystem-archaeologist-agent/: .gitignore  README.md  pyproject.toml
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/: app_logger.py  cli.py  config.py  exceptions.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/agents/: __init__.py  base.py  classifier.py  exceptions.py  orchestrator.py  plan_execute_agent.py  react_agent.py  reflection.py  scanner.py  validator.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/hitl/: __init__.py  approval_gate.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/memory/: __init__.py  retrieval.py  store.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/models/: __init__.py  agent.py  base.py  classification.py  filesystem.py  memory.py  reflection.py  safety.py  session.py  workflow.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/prompts/: prompts.json  prompts.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/safety/: exceptions.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/tools/: __init__.py  filesystem.py  reflection_tools.py
filesystem-archaeologist-agent/src/agentic_fs_archaeologist/utils/: file_utils.py
linkedinagent/: .gitignore  README.md  agents.py  li_parser.py  li_ui_actions.py  logging_config.py  models.py  personal_li_agent.py  prompts.json  prompts.py  requirements.txt  state.py
newsletter-declutter-agent/: .gitignore  README.md  app_logger.py  gmail_auth.py  (+8 more)
