[project]
name = "agentic-fs-archaeologist"
version = "0.2.3"
description = "Multi-pattern agentic system for safe filesystem cleanup using ReAct, HITL, and Memory"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Nirmalya Ghosh" }
]

license = { text = "MIT" }
keywords = ["agentic-ai", "react-pattern", "disk-cleanup", "filesystem", "llm"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Filesystems",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
]

[project.scripts]
fs-archaeologist = "agentic_fs_archaeologist.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
